word wrap issue resolved

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .chat{
+	word-wrap: break-word;
 	display:none;
 	margin: 0 auto 100px;
-	overflow:hidden;
 }
